# stocks

./: help.txt  pyproject.toml
stocks/: Hello.py  getstocks.py  import yahoo_fin.stock_info as si.py  scanner.py
