[tool.poetry]
name = "stocks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
yfinance = "^0.1.64"
pandas-datareader = "^0.10.0"
yahoo-fin = "^0.8.9"
tzlocal = "^4.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
ipykernel = "^6.4.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
